--- a/final-project/style.css
+++ b/final-project/style.css
@@ -32,6 +32,9 @@ body, html {
 
 #filters select {
   margin-right: 12px;
+  padding: 5px 10px;
+  font-size: 15px;
+  min-width: 60px;
 }
 
 #map {
@@ -40,7 +43,7 @@ body, html {
 }
 
 .county-label {
-  font-size: 10px;
+  font-size: 12px;
   color: #00274d;
   font-weight: normal;
   text-shadow: 1px 1px 2px white;
@@ -81,4 +84,17 @@ body, html {
   margin-right: 6px;
   background-color: #ccc;
   border: 1px solid #999;
+}
+
+.info-box {
+  position: absolute;
+  bottom: 10px;
+  left: 170px;
+  width: 300px;
+  background: white;
+  padding: 10px;
+  font-size: 12px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+  z-index: 1000;
 }
